# CPPDesignPatterns

./: CFactoryMaker.cpp  CFactoryMakerConsumer.cpp  CMakeLists.txt  CObserverConsumer.cpp  CObserverEventCollector.cpp  CObserverEventGenerator.cpp  CObserverEventGenerator.h  CPointerToImplementation.cpp  CPointerToImplementation.h  CSingleton.cpp  CSingleton.h  IFactoryInterface.h  IObserverInterface.h  Multibuild.sh  PointerToImplementation.cpp  PointerToImplementation.h  README.md  main.cpp  project.config
Facade/: CCollectionClasses.cpp  CMakeFacade.cpp  CMakeFacade.h
Factory/: CFactoryMaker.cpp  CFactoryMaker.h  IFactoryInterface.h
Observer/: CObserverEventGenerator.cpp  IObserverInterface.h
Pimple/: CPointerToImplementation.cpp  CPointerToImplementation.h
SignalSlot/: CSignalSlotImpl.cpp  CSignalSlotType1.h
SignalSlotV1/: CSignalSlotType1.h
SignalSlotV2/: CSignalSlotType2.h
Singleton/: CSingleton.cpp  CSingleton.h
